Fixed settings alignment issue, improved some logs and altered search by artists case to only compare song title.

--- a/frontend/src/OptionsOverlay.css
+++ b/frontend/src/OptionsOverlay.css
@@ -37,7 +37,6 @@
 .settings-header {
     font-size: 24px;
     text-align: center;
-
     width: 100%;
 }
 
@@ -84,10 +83,11 @@
 
 .setting-buttons-container {
     padding: 4px;
-    width: 100%;
     display: flex;
+    width: auto;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
     flex: 0 1;
     order: 0;
